cmake_minimum_required(VERSION 3.6)




add_subdirectory(ArrayBitManip)
add_subdirectory(Stack)
add_subdirectory(Queue)
add_subdirectory(Misc)
add_subdirectory(LinkedList)
add_subdirectory(Sorting)
add_subdirectory(Strings)
add_subdirectory(Trees)
add_subdirectory(DP)
add_subdirectory(Recursion)
add_subdirectory(Graphs)
add_subdirectory(Heap)
add_subdirectory(Tries)


